testnodeapp-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: test-node-app
spec:
  ports:
  - port: 9091
    targetPort: 9091
    name: http
    protocol: TCP  
  selector:
    app: test-node-app
  type: NodePort
